Fix alignment and layout of expert list items
CORL-863

--- a/src/core/client/stream/tabs/Configure/Q&A/ExpertListItem.css
+++ b/src/core/client/stream/tabs/Configure/Q&A/ExpertListItem.css
@@ -73,6 +73,31 @@
   letter-spacing: 0.0125em;
 }
 
+.username {
+  display: inline-block;
+
+  color: var(--palette-text-dark);
+  font-size: calc(16rem / var(--rem-base));
+  font-weight: var(--font-weight-medium);
+  font-family: var(--font-family-sans-serif);
+  line-height: 1.375em;
+  letter-spacing: 0.0125em;
+
+  margin-right: var(--v2-spacing-1);
+}
+
+.email {
+  display: inline-block;
+
+  color: var(--palette-text-primary);
+  font-size: calc(16rem / var(--rem-base));
+  font-weight: var(--font-weight-regular);
+  font-family: var(--font-family-sans-serif);
+  line-height: 1.375em;
+  letter-spacing: 0.0125em;
+}
+
 .removeButton {
   padding: var(--v2-spacing-1);
+  margin-right: 80px;
 }
